[package]
name = "exr-decoder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.78"
web-sys = { version = "0.3.55", features = ["ImageData"] }
exr = "1.3.0"

[profile.release]
lto = true
panic = "abort"
