[package]
name = "exr-decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.80"
web-sys = { version = "0.3.57", features = ["ImageData"] }
exr = "1.4.2"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
