[package]
name = "masonry"
version = "0.1.0"
authors = ["Remi van der Laan <rrm-remi@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.78"
js-sys = "0.3.55"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
# Increases compile times for better inlining
codegen-units = 1
# Increases compile times for better inlining across crates
lto = true
